--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -160,6 +160,7 @@
 \newcommand{\alphar}{\ensuremath{\mathrel{\alpha}}}
 \newcommand{\betar}{\ensuremath{\mathrel{\beta}}}
 \newcommand{\gammar}{\ensuremath{\mathrel{\gamma}}}
+\newcommand{\deltar}{\ensuremath{\mathrel{\delta}}}
 \newcommand{\balpha}{\ensuremath{\boldsymbol{\alpha}}}
 \newcommand{\bbeta}{\ensuremath{\boldsymbol{\beta}}}
 \newcommand{\bone}{\ensuremath{\boldsymbol{1}}}
