--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -138,12 +138,15 @@
 \newcommand{\uthree}{\ensuremath{\underline{3}}}
 
 \newcommand{\sA}{\ensuremath{\mathcal{A}}}
+\newcommand{\scA}{\ensuremath{\mathscr{A}}}
 \newcommand{\sV}{\ensuremath{\mathcal{V}}}
 \newcommand{\sB}{\ensuremath{\mathcal{B}}}
 \newcommand{\sS}{\ensuremath{\mathcal{S}}}
 \newcommand{\cC}{\ensuremath{\mathcal{C}}}
 \newcommand{\cS}{\ensuremath{\mathcal{S}}}
+\newcommand{\scS}{\ensuremath{\mathscr{S}}}
 \newcommand{\sC}{\ensuremath{\mathcal{C}}}
+\newcommand{\sU}{\ensuremath{\mathcal{U}}}
 \newcommand{\sI}{\ensuremath{\mathcal{I}}}
 \newcommand{\sK}{\ensuremath{\mathcal{K}}}
 \newcommand{\sM}{\ensuremath{\mathcal{M}}}
@@ -259,3 +262,5 @@
 %% \newcommand{\mas}{\acs{MAS}\xspace}
 
 \renewcommand{\subsetneq}{\ensuremath{\subsetneqq}}
+   %% \newcommand{\glocal}{global-local} %% This is a weird name... changing it:
+   \newcommand{\glocal}{local\xspace}
