--- a/nsjom/loc-diff-terms-nsjom.tex
+++ b/nsjom/loc-diff-terms-nsjom.tex
@@ -1465,7 +1465,7 @@ as desired.
     $\{(a,a'), (b,a'), (b,b')\}$, and then
     tests whether $S \cap (a/\delta \times \{b'\})$ is empty.
     If we find an empty intersection at any point, then
-    $\bA$ has a difference term operation.
+    $\bA$ has no difference term operation.
     Otherwise the algorithm halts without witnessing an empty
     intersection, in which case $\bA$ has a difference term operation.
 
@@ -1754,7 +1754,7 @@ The converse of Lemma~\ref{lem:products} is harder to prove.
   \Comr{\Cg^{\bA}(a,a')} a \quad \text{ and } \quad
   d^{\bB}(b, b', b')
   \Comr{\Cg^{\bB}(b,b')} b.
-\]
+  \]
   Therefore, 
   % the pair $\bigl((d^{\bA}(a,a',a'),d^{\bB}(b, b', b')), (a,b)\bigr)$ belongs
   % to the relation \[ \Com{\Cg^{\bA}(a,a')} \mytimes \Com{\Cg^{\bB}(b,b')}.\]
@@ -1811,7 +1811,7 @@ The converse of Lemma~\ref{lem:products} is harder to prove.
   deciding whether $\bF$ has a difference term operation.
   We can assume $\bF$ is a subdirect product of
   $\bA_0 \times \bA_1 \times \cdots \times \bA_{n-1}$, where $n\leq |A|^2$ and
-  where each $\bA_i$ is a 2-generated subalgebra of $\bA$..
+  where each $\bA_i$ is a 2-generated subalgebra of $\bA$.
   Let $\scA = \{A_0, A_1, \dots, A_{n-1}\}$ and (as above) let $\scS(\scA)$ denote 
   all pairs $(A, i)$ such that $\bA = \<A, \dots\> \in \scA$ and $i\in \{0,1\}$.
 
