--- a/nsjom/macros.sty
+++ b/nsjom/macros.sty
@@ -43,6 +43,7 @@
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
 \newcommand{\Tol}{\ensuremath{\operatorname{Tol}}}
 \newcommand{\Con}{\ensuremath{\operatorname{Con}}}
+\newcommand{\Hom}{\ensuremath{\operatorname{Hom}}}
 \newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
 \newcommand{\Sg}{\ensuremath{\operatorname{Sg}}}
 \newcommand{\Clo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
@@ -149,6 +150,7 @@
 \newcommand{\rbeta}{\ensuremath{\mathrel{\beta}}}
 \newcommand{\rdelta}{\ensuremath{\mathrel{\delta}}}
 \newcommand{\balpha}{\ensuremath{\boldsymbol{\alpha}}}
+\newcommand{\thetar}{\ensuremath{\mathrel{\theta}}}
 \newcommand{\alphar}{\ensuremath{\mathrel{\alpha}}}
 \newcommand{\betar}{\ensuremath{\mathrel{\beta}}}
 \newcommand{\gammar}{\ensuremath{\mathrel{\gamma}}}
