--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -306,23 +306,25 @@
     ``I answered Question 2!''
 
     %% \animategraphics[loop,controls,width=5cm]{12}{84871861-}{0}{149}
-    \animategraphics[loop,controls,width=5cm]{12}{./Vb68Anr/Vb68Anr-}{0}{39}
+    %% \animategraphics[loop,controls,width=5cm]{12}{./Vb68Anr/Vb68Anr-}{0}{39}
 
+    [insert Barnett gif here]
     \pause
     ~\phantom{XXXXXXXXXXX}...not really.
   \end{center}
 \end{frame}
-\begin{frame}[label=premature]{}
 
+\begin{frame}[label=premature2]{}
   \begin{center}
-    \animategraphics[loop,controls,width=5cm]{12}{84871861-}{0}{149}
+    %% \animategraphics[loop,controls,width=5cm]{12}{84871861-}{0}{149}
     %% \animategraphics[loop,controls,width=5cm]{12}{./Vb68Anr/Vb68Anr-}{0}{39}
+    [insert cyclist gif here]
     \pause
   \end{center}
 \end{frame}
 
-%%   \begin{frame}[label=champion]{Champion}
-%% \end{frame}
+  \begin{frame}[label=champion]{Champion}
+\end{frame}
 
 
 %=========================================================================
